--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!--  Session of Feb 16th,23:
  make a project on any topic  --> 
- <!-- Mini_project:03 --> 
- <!-- Task-16 --> 
+ <!-- Major_project:01 --> 
+ <!-- Task-12 --> 
  
 
 
